Actualizado application properties para trabajar en máquina local contra DB en produccion y procedimiento de uso en el README

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.datasource.password = admin
 
 
-
-
-spring.datasource.url = jdbc:mysql://mysql:3306/e2t_mysql
+# Cambiar siempre antes de utilizar en produccion
+spring.datasource.url = jdbc:mysql://192.168.7.26:3306/e2t_mysql
+# spring.datasource.url = jdbc:mysql://mysql:3306/e2t_mysql
 spring.datasource.username = e2t_user
 spring.datasource.password = e2t_2024
 
